--- a/.github/workflows/NoZebra.yml
+++ b/.github/workflows/NoZebra.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Delete old release
         uses: dev-drprasad/delete-tag-and-release@v0.2.1
         with:
-          delete_release: true
+          delete_release: false
           tag_name: release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
