--- a/.github/workflows/NoZebra.yml
+++ b/.github/workflows/NoZebra.yml
@@ -37,6 +37,14 @@ jobs:
           name: Bootstrap.tipa
           path: ./packages/Bootstrap.tipa
 
+                - name: Delete old release
+        uses: dev-drprasad/delete-tag-and-release@v0.2.1
+        with:
+          delete_release: true
+          tag_name: release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Get RootHide Bootstrap .tipa artifact
         uses: actions/download-artifact@v3
         with:
