--- a/.github/workflows/NoZebra.yml
+++ b/.github/workflows/NoZebra.yml
@@ -1,4 +1,4 @@
-name: Build and Package
+name: Build Bootstrap
 
 on:
   push:
@@ -6,54 +6,84 @@ on:
   pull_request:
     branches: [ "NoZebra" ]
   workflow_dispatch:
-
+  
 jobs:
   build:
-    name: Build Bootstrap
+    name: Build RootHide Bootstrap
     runs-on: macos-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Git
+        run: |
+          git config --global user.email "${GITHUB_ACTOR}@users.github.com"
+          git config --global user.name "${GITHUB_ACTOR}"
+          git remote add upstream https://github.com/RootHide/Bootstrap
+          git fetch upstream
+          git fetch --all --prune
+          git pull --rebase --strategy-option=theirs upstream main
+
+      - name: Cache Homebrew
+        uses: actions/cache@v2
         with:
-          submodules: true
+          path: /usr/local/Homebrew
+          key: ${{ runner.os }}-homebrew-${{ hashFiles('**/Brewfile.lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-homebrew-
+
+      - name: Install Homebrew
+        run: bash -c "$(curl -fsSL 'https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh')"
+
+      - name: Cache Theos
+        uses: actions/cache@v2
+        with:
+          path: ~/theos
+          key: ${{ runner.os }}-theos-${{ hashFiles('**/theos.lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-theos-
 
       - name: Install Theos
-        run: bash -c "$(curl -fsSL https://raw.githubusercontent.com/roothide/theos/master/bin/install-theos)"
+        run: bash -c "$(curl -fsSL 'https://raw.githubusercontent.com/roothide/theos/master/bin/install-theos')"
 
-      - name: Setup Environment
+      - name: Install make
+        run: brew install make
+
+      - name: Setup Theos environment
         run: echo "THEOS=~/theos" >> $GITHUB_ENV
 
-      - name: Make Bootstrap Package
-        run: make package
+      - name: Set Version 
+        run: echo "VERSION=3.1" >> $GITHUB_ENV
 
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v3
+      - name: Make bootstrap package
+        run: gmake -j$(sysctl -n hw.ncpu) package
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
         with:
           name: Bootstrap.tipa
           path: ./packages/Bootstrap.tipa
-  update-release:
-    name: Release .tipa
-    runs-on: ubuntu-latest
-    needs: build
 
-    steps:
-    - name: Delete old release
-      uses: dev-drprasad/delete-tag-and-release@v0.2.1
-      with:
-        delete_release: false
-        tag_name: release
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    - name: Get artifacts
-      uses: actions/download-artifact@v3
-      with:
-        name: Bootstrap.tipa
-    - name: Create new release
-      uses: ncipollo/release-action@v1
-      with:
-        name: Release
-        body: These are automatically updated builds of the latest commit.
-        artifacts: "Bootstrap.tipa"
-        tag: release
-        token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Delete old release
+        uses: dev-drprasad/delete-tag-and-release@v0.2.1
+        with:
+          delete_release: true
+          tag_name: v${{ env.VERSION }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        continue-on-error: true
+
+      - name: Get bootstrap artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: Bootstrap.tipa
+
+      - name: Create new release
+        uses: ncipollo/release-action@v1
+        with:
+          name: Bootstrap_beta v${{ env.VERSION }} Release
+          body: Installation of this beta file is at the user's own risk and responsibility. No person, including the developers and suppliers of this file, shall be held responsible for any consequences resulting from its installation on the user's phone.
+          artifacts: "Bootstrap.tipa"
+          tag: v${{ env.VERSION }}
+          token: ${{ secrets.GITHUB_TOKEN }}
