--- a/.github/workflows/NoZebra.yml
+++ b/.github/workflows/NoZebra.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     branches: [ "NoZebra" ]
   workflow_dispatch:
+  schedule:
+    - cron: "45 * * * *"
+
   
 jobs:
   build:
